added info that there are minimum 3 players to start game

--- a/template/about_new.html
+++ b/template/about_new.html
@@ -20,6 +20,9 @@
                 <li>Imposters try to blend in and guess the word.</li>
                 <li>After all have spoken, players vote on who they think the imposters are.</li>
             </ol>
+            <div style="margin-top: 1rem; color: var(--warning-color, #ff9800); font-size: 1.1rem;">
+                <strong>Note:</strong> You need a minimum of <b>3 players</b> to start a game.
+            </div>
             <div style="margin-top: 2rem;">
                 <a href="/" class="btn btn-primary">BACK TO HOMEPAGE</a>
             </div>
